fixed posix install destination

--- a/platforms/posix/CMakeLists.txt
+++ b/platforms/posix/CMakeLists.txt
@@ -73,7 +73,7 @@ install(
 		${CMAKE_BINARY_DIR}/etc
 		${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
 	DESTINATION
-		${PROJECT_NAME}
+		${CATKIN_PACKAGE_SHARE_DESTINATION}
 	USE_SOURCE_PERMISSIONS
 )
 
@@ -128,7 +128,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 			${PROJECT_SOURCE_DIR}/launch
 			${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
 		DESTINATION
-			${PROJECT_NAME}
+			${CATKIN_PACKAGE_SHARE_DESTINATION}
 		USE_SOURCE_PERMISSIONS
 		)
 
@@ -138,7 +138,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 			${PROJECT_SOURCE_DIR}/CMakeLists.txt
 			${PROJECT_SOURCE_DIR}/package.xml
 		DESTINATION
-			${PROJECT_NAME}
+			${CATKIN_PACKAGE_SHARE_DESTINATION}
 		)
 
 	# px4 Tools dirs
@@ -146,7 +146,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 		DIRECTORY
 			${PROJECT_SOURCE_DIR}/Tools/ecl_ekf
 		DESTINATION
-			${PROJECT_NAME}/Tools
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/Tools
 		USE_SOURCE_PERMISSIONS
 		)
 
@@ -156,7 +156,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 			${PROJECT_SOURCE_DIR}/Tools/setup_gazebo.bash
 			${PROJECT_SOURCE_DIR}/Tools/upload_log.py
 		DESTINATION
-			${PROJECT_NAME}/Tools
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/Tools
 		)
 
 	# ROMFS files
@@ -164,7 +164,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 		DIRECTORY
 			${PX4_BINARY_DIR}/etc
 		DESTINATION
-			${PROJECT_NAME}/build/px4_sitl_default
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/build/px4_sitl_default
 		)
 
 	# sitl_gazebo built plugins
@@ -172,7 +172,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 		DIRECTORY
 			${PX4_BINARY_DIR}/build_gazebo
 		DESTINATION
-			${PROJECT_NAME}/build/px4_sitl_default
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/build/px4_sitl_default
 		FILES_MATCHING
 			PATTERN "CMakeFiles" EXCLUDE
 			PATTERN "*.so"
@@ -184,7 +184,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 			${PROJECT_SOURCE_DIR}/Tools/sitl_gazebo/models
 			${PROJECT_SOURCE_DIR}/Tools/sitl_gazebo/worlds
 		DESTINATION
-			${PROJECT_NAME}/Tools/sitl_gazebo
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/Tools/sitl_gazebo
 		)
 
 	# sitl_gazebo files
@@ -193,7 +193,7 @@ elseif("${PX4_BOARD}" MATCHES "sitl")
 			${PROJECT_SOURCE_DIR}/Tools/sitl_gazebo/CMakeLists.txt
 			${PROJECT_SOURCE_DIR}/Tools/sitl_gazebo/package.xml
 		DESTINATION
-			${PROJECT_NAME}/Tools/sitl_gazebo
+			${CATKIN_PACKAGE_SHARE_DESTINATION}/Tools/sitl_gazebo
 		)
 
 endif()
