--- a/.github/workflows/cflite_batch.yml
+++ b/.github/workflows/cflite_batch.yml
@@ -1,7 +1,9 @@
 name: ClusterFuzzLite batch fuzzing
 on:
-  schedule:
-    - cron: '0 6 * * *'  # UTC 6am every day.
+  push:
+    branches:
+    - 'master'
+
 permissions: read-all
 jobs:
   BatchFuzzing:
