add support for octa_x_reversed configuration

--- a/ROMFS/px4fmu_common/mixers/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/mixers/CMakeLists.txt
@@ -62,6 +62,7 @@ px4_add_romfs_files(
 	octo_cox_w.main.mix
 	octo_+.main.mix
 	octo_x.main.mix
+	octo_x_reversed.main.mix
 	pass.aux.mix
 	quad_dc.main.mix
 	quad_h.main.mix
