--- a/src/lib/mixer/MultirotorMixer/CMakeLists.txt
+++ b/src/lib/mixer/MultirotorMixer/CMakeLists.txt
@@ -42,6 +42,7 @@ set(geometry_files
 	octa_cox_wide.toml
 	octa_plus.toml
 	octa_x.toml
+	octa_x_reversed.toml
 	quad_deadcat.toml
 	quad_h.toml
 	quad_plus.toml
