fixed tilt drone naming

--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -79,6 +79,6 @@ px4_add_romfs_files(
 	6011_typhoon_h480.post
 	6012_typhoon_h480_ctrlalloc
 	6012_typhoon_h480_ctrlalloc.post
-	6100_hexa_tilt_x
-	6100_hexa_tilt_x.post
+	6100_hexa_x_tilt
+	6100_hexa_x_tilt.post
 )
