--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -100,7 +100,7 @@ px4_add_romfs_files(
 	# [6000, 6999] Hexarotor x"
 	6001_hexa_x
 	6002_draco_r
-	6100_hexa_tilt_x
+	6100_hexa_x_tilt
 
 	# [7000, 7999] Hexarotor +"
 	7001_hexa_+
